RESOLVED FIXED303470
[blocks-in-inline] Dirty layout assert with simplified layout
https://bugs.webkit.org/show_bug.cgi?id=303470
Summary [blocks-in-inline] Dirty layout assert with simplified layout
Antti Koivisto
Reported 2025-12-03 04:08:34 PST
with fast/repaint/transform-absolute-in-positioned-container.html
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-03 04:08:48 PST
Antti Koivisto
Comment 2 2025-12-03 04:10:35 PST
EWS
Comment 3 2025-12-03 07:39:44 PST
Committed 303832@main (ab5612e782fc): <https://commits.webkit.org/303832@main> Reviewed commits have been landed. Closing PR #54768 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.