[blocks-in-inline] Dirty layout assert with simplified layout https://bugs.webkit.org/show_bug.cgi?id=303470 rdar://165755129

Reviewed by Alan Baradlay.

With fast/repaint/transform-absolute-in-positioned-container.html

* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::simplifiedNormalFlowLayout):

Make sure we clear the simplified layout bit for blocks-in-inline too.

Canonical link: https://commits.webkit.org/303832@main